--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,7 @@ ktp-common-internals (0.9.0-1) UNRELEASED; urgency=medium
   * kde-telepathy-kpeople breaks/replaces old kde-telepathy-data
 
   [ Diane Trout ]
-  Pull changes from kubuntu.
+  Pull changes from Kubuntu.
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 28 Oct 2014 13:14:01 +0100
 
