--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ktp-common-internals (0.8.1-4) UNRELEASED; urgency=medium
+ktp-common-internals (0.8.1-4) unstable; urgency=medium
 
   * Make sure telepathy-logger is installed (Closes: #774552)
 
