--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ktp-common-internals (0.8.1-5) UNRELEASED; urgency=medium
+
+  * Update description to use better English (Closes: #769362)
+    Thanks Filipus Klutiero
+
+ -- Diane Trout <diane@ghic.org>  Mon, 09 Mar 2015 20:54:35 -0700
+
 ktp-common-internals (0.8.1-4) unstable; urgency=medium
 
   * Make sure telepathy-logger is installed (Closes: #774552)
