--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-ktp-common-internals (15.03.80-0ubuntu1) UNRELEASED; urgency=medium
+ktp-common-internals (15.04.0-1~) UNRELEASED; urgency=medium
 
+  [ Harald Sitter ]
   * KDE Frameworks 5 port
     + rename lib packages for sobump
     + rename -dev package to libktp-dev to match the cmake config one
@@ -13,10 +14,6 @@ ktp-common-internals (15.03.80-0ubuntu1) UNRELEASED; urgency=medium
       align with the implicit naming policy for qml modules in Qt5 (no
       conflicts)
     + Update watch file. The source now is released as part of applications.
-
- -- Harald Sitter <sitter@kde.org>  Fri, 06 Mar 2015 11:05:05 +0100
-
-ktp-common-internals (0.9.0-1) UNRELEASED; urgency=medium
 
   [ Jonathan Riddell ]
   * New upstream release
@@ -42,7 +39,7 @@ ktp-common-internals (0.9.0-1) UNRELEASED; urgency=medium
   * Update Standards-Version to 3.9.6.0. No changes needed.
   * Update debian/watch file.
 
- -- Diane Trout <diane@ghic.org>  Tue, 16 Sep 2014 22:03:11 -0700
+ -- Harald Sitter <sitter@kde.org>  Fri, 06 Mar 2015 11:05:05 +0100
 
 ktp-common-internals (0.9.0-0ubuntu3) vivid; urgency=medium
 
