--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-ktp-common-internals (15.04.0-0ubuntu1) UNRELEASED; urgency=medium
+ktp-common-internals (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Harald Sitter ]
   * KDE Frameworks 5 port
     + rename lib packages for sobump
     + rename -dev package to libktp-dev to match the cmake config one
@@ -14,7 +15,10 @@ ktp-common-internals (15.04.0-0ubuntu1) UNRELEASED; urgency=medium
       conflicts)
     + Update watch file. The source now is released as part of applications.
 
- -- Harald Sitter <sitter@kde.org>  Fri, 06 Mar 2015 11:05:05 +0100
+  [ Scarlett Clark ]
+  * New upstream release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 13 May 2015 22:35:47 -0700
 
 ktp-common-internals (0.9.0-0ubuntu3) vivid; urgency=medium
 
