--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ ktp-common-internals (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
 
   [ Scarlett Clark ]
   * New upstream release
+  * This needs libtelepathy-logger-qt5-dev it is a kf5 app. 
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 13 May 2015 22:35:47 -0700
 
