--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ktp-common-internals (0.9.0-1) UNRELEASED; urgency=medium
+ktp-common-internals (0.9.0-1) unstable; urgency=medium
 
   [ Jonathan Riddell ]
   * New upstream release
@@ -24,7 +24,7 @@ ktp-common-internals (0.9.0-1) UNRELEASED; urgency=medium
   * Update Standards-Version to 3.9.6.0. No changes needed.
   * Update debian/watch file.
 
- -- Diane Trout <diane@ghic.org>  Tue, 16 Sep 2014 22:03:11 -0700
+ -- Diane Trout <diane@ghic.org>  Sat, 25 Apr 2015 19:30:59 -0700
 
 ktp-common-internals (0.8.1-4) unstable; urgency=medium
 
