--- a/debian/changelog
+++ b/debian/changelog
@@ -21,8 +21,9 @@ ktp-common-internals (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
   * Remove the non existant version dep for above. 
   * Try libtelepthy-logger-qt-dev again. 
   * OTR requires telepathy-qt5 >= 0.9.5 
+  * Vivid backport
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 13 May 2015 22:35:47 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 27 May 2015 09:06:11 -0700
 
 ktp-common-internals (0.9.0-0ubuntu3) vivid; urgency=medium
 
