--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 ktp-common-internals (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
 
+  * Backport to vivid. 
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 27 May 2015 13:01:14 -0700
+
+ktp-common-internals (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
+
   [ Harald Sitter ]
   * KDE Frameworks 5 port
     + rename lib packages for sobump
@@ -21,7 +27,6 @@ ktp-common-internals (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
   * Remove the non existant version dep for above. 
   * Try libtelepthy-logger-qt-dev again. 
   * OTR requires telepathy-qt5 >= 0.9.5 
-  * Vivid backport
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 27 May 2015 09:06:11 -0700
 
