--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 ktp-common-internals (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
 
   * Backport to vivid. 
+  * Fix libtelepathy-qt5-dev name. 
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 27 May 2015 13:01:14 -0700
 
