--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ktp-common-internals (0.9.0-2) UNRELEASED; urgency=medium
+
+  * Apply homepage update patch from Matthew Cope
+
+ -- Diane Trout <diane@ghic.org>  Wed, 27 May 2015 23:00:06 -0700
+
 ktp-common-internals (0.9.0-1) unstable; urgency=medium
 
   [ Jonathan Riddell ]
