--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 ktp-common-internals (0.9.0-2) UNRELEASED; urgency=medium
 
   * Apply homepage update patch from Matthew Cope
+  * Update Diane Trout's email address.
 
- -- Diane Trout <diane@ghic.org>  Wed, 27 May 2015 23:00:06 -0700
+ -- Diane Trout <diane@debian.org>  Sat, 04 Jul 2015 09:47:27 -0700
 
 ktp-common-internals (0.9.0-1) unstable; urgency=medium
 
