--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ ktp-common-internals (0.9.0-2) UNRELEASED; urgency=medium
 
   * Apply homepage update patch from Matthew Cope
   * Update Diane Trout's email address.
+  * Update watchfile for kde-telepathys inclusion in KDE Applications.
 
  -- Diane Trout <diane@debian.org>  Sat, 04 Jul 2015 09:47:27 -0700
 
