--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-ktp-common-internals (0.9.0-2) UNRELEASED; urgency=medium
+ktp-common-internals (15.04.3-1) UNRELEASED; urgency=medium
 
   * Apply homepage update patch from Matthew Cope
   * Update Diane Trout's email address.
   * Update watchfile for kde-telepathys inclusion in KDE Applications.
+  * New upstream release.
 
- -- Diane Trout <diane@debian.org>  Sat, 04 Jul 2015 09:47:27 -0700
+ -- Diane Trout <diane@debian.org>  Sat, 04 Jul 2015 09:50:32 -0700
 
 ktp-common-internals (0.9.0-1) unstable; urgency=medium
 
