--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ ktp-common-internals (15.04.3-1) UNRELEASED; urgency=medium
   * Update Diane Trout's email address.
   * Update watchfile for kde-telepathys inclusion in KDE Applications.
   * New upstream release.
+  * Update library package names to match new SONAME.
 
  -- Diane Trout <diane@debian.org>  Sat, 04 Jul 2015 09:50:32 -0700
 
