--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ ktp-common-internals (15.04.3-1) UNRELEASED; urgency=medium
   * Update watchfile for kde-telepathys inclusion in KDE Applications.
   * New upstream release.
   * Update library package names to match new SONAME.
+  * Rename library packages to remove the "private" suffix.
   * Update build-dependencies according to cmake rules.
     - Bump libkpeople-dev version to >= 0.5.0
     - Add extra-cmake-modules, qtdeclarative5-dev,
