--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ ktp-common-internals (15.04.3-1) UNRELEASED; urgency=medium
       libaccounts-qt5-dev >= 1.10
   * Update date range and add Aleix Pols last name in the copyright file.
   * Change kpeople build dependiency to libkf5people-dev (>= 0.5.0)
+  * Change build-depends telepathy-qt and telepathy-logger-qt to qt5
+    versions.
 
  -- Diane Trout <diane@debian.org>  Sat, 04 Jul 2015 09:50:32 -0700
 
