--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,7 @@ ktp-common-internals (15.04.3-1) UNRELEASED; urgency=medium
     e.g. out of /usr/share/kde4, libraries into multi-arch directories,
     and the new SONAME library filenames.
   * Remove unused blocks KTp/ktp-export.h and po/* from copyright file.
+  * Rename liblktpcommoninterals-dev to libktp-dev
 
  -- Diane Trout <diane@debian.org>  Sat, 04 Jul 2015 09:50:32 -0700
 
