--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,7 @@ ktp-common-internals (15.04.3-1) UNRELEASED; urgency=medium
   * Rename liblktpcommoninterals-dev to libktp-dev
   * Rename kde-telepathy-declarative to qml-module-org-kde-telepathy
   * Add kde-telepathy-kaccounts package.
+  * Use --fail-missing to make it easier to find not installed files.
 
  -- Diane Trout <diane@debian.org>  Sat, 04 Jul 2015 09:50:32 -0700
 
