--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ ktp-common-internals (15.04.3-1) UNRELEASED; urgency=medium
   * Rename kde-telepathy-declarative to qml-module-org-kde-telepathy
   * Add kde-telepathy-kaccounts package.
   * Use --fail-missing to make it easier to find not installed files.
+  * Switch to --with kf5. Update several plugin paths to $arch/qt5/plugin.
 
  -- Diane Trout <diane@debian.org>  Sat, 04 Jul 2015 09:50:32 -0700
 
