--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,7 @@ ktp-common-internals (15.04.3-1) UNRELEASED; urgency=medium
   * Use dhmk from pkg-kde-tools to build ktp.
     - Change maintainer to debian-qt-kde
     - Update debian/rules
+  * Add breaks/replaces libktpotrprivate9 to help migrate to new name
 
  -- Diane Trout <diane@debian.org>  Sat, 04 Jul 2015 09:50:32 -0700
 
