--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ktp-common-internals (4:15.04.2-0ubuntu2) UNRELEASED; urgency=medium
+
+  * Update symbols files: mark symbols gone after building with GCC 5 as
+    optional
+
+ -- José Manuel Santamaría Lema <panfaust@gmail.com>  Wed, 29 Jul 2015 12:37:46 +0200
+
 ktp-common-internals (4:15.04.2-0ubuntu1) wily; urgency=medium
 
   [ Scarlett Clark ]
