--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-ktp-common-internals (4:15.04.2-0ubuntu2) UNRELEASED; urgency=medium
+ktp-common-internals (4:15.07.90-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ José Manuel Santamaría Lema ]
   * Update symbols files: mark symbols gone after building with GCC 5 as
     optional
 
- -- José Manuel Santamaría Lema <panfaust@gmail.com>  Wed, 29 Jul 2015 12:37:46 +0200
+  [ Jonathan Riddell ]
+  * new upstream beta release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 13 Aug 2015 11:35:21 +0100
 
 ktp-common-internals (4:15.04.2-0ubuntu1) wily; urgency=medium
 
