--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ktp-common-internals (4:15.07.90-0ubuntu1) UNRELEASED; urgency=medium
+ktp-common-internals (4:15.07.90-0ubuntu1) wily; urgency=medium
 
   [ José Manuel Santamaría Lema ]
   * Update symbols files: mark symbols gone after building with GCC 5 as
@@ -7,7 +7,7 @@ ktp-common-internals (4:15.07.90-0ubuntu1) UNRELEASED; urgency=medium
   [ Jonathan Riddell ]
   * new upstream beta release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 13 Aug 2015 11:35:21 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 18 Aug 2015 11:17:51 +0100
 
 ktp-common-internals (4:15.04.2-0ubuntu1) wily; urgency=medium
 
