--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ktp-common-internals (15.04.2-1~) UNRELEASED; urgency=medium
+ktp-common-internals (15.08.0-1~) UNRELEASED; urgency=medium
 
   [ Harald Sitter ]
   * KDE Frameworks 5 port
@@ -42,8 +42,9 @@ ktp-common-internals (15.04.2-1~) UNRELEASED; urgency=medium
   [ Maximiliano Curia ]
   * New upstream release (15.04.1).
   * New upstream release (15.04.2).
+  * New upstream release (15.08.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 05 Jun 2015 11:16:17 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 10 Sep 2015 14:05:49 +0200
 
 ktp-common-internals (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
 
