--- a/debian/changelog
+++ b/debian/changelog
@@ -35,7 +35,7 @@ ktp-common-internals (15.07.90-1) UNRELEASED; urgency=medium
   * Add breaks/replaces libktpotrprivate9 to help migrate to new name
   * Add KDE's unstable download url to watch file
   * Update symbols files to be compatible with GCC-5
-  * Update kde-telepathy-kepople.install to inly track kpeople related plugins
+  * Update kde-telepathy-kepople.install to rules track kpeople related plugins
 
  -- Diane Trout <diane@debian.org>  Sun, 09 Aug 2015 14:15:11 -0700
 
