--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ktp-common-internals (4:15.08.1-0ubuntu1) UNRELEASED; urgency=medium
+ktp-common-internals (4:15.08.1-0ubuntu1) wily; urgency=medium
 
   * New upstream release (15.08.1)
 
- -- Clive Johnston <clivejo@aol.com>  Thu, 17 Sep 2015 11:29:56 +0100
+ -- Clive Johnston <clivejo@aol.com>  Tue, 22 Sep 2015 17:31:01 +0100
 
 ktp-common-internals (4:15.08.0-0ubuntu1) wily; urgency=medium
 
