--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ktp-common-internals (15.08.1-1~) UNRELEASED; urgency=medium
+ktp-common-internals (15.08.2-1~) UNRELEASED; urgency=medium
 
   [ Harald Sitter ]
   * KDE Frameworks 5 port
@@ -44,8 +44,9 @@ ktp-common-internals (15.08.1-1~) UNRELEASED; urgency=medium
   * New upstream release (15.04.2).
   * New upstream release (15.08.0).
   * New upstream release (15.08.1).
+  * New upstream release (15.08.2).
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 17 Sep 2015 19:54:54 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 12 Oct 2015 15:28:11 +0200
 
 ktp-common-internals (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
 
