--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ktp-common-internals (4:15.08.2-0ubuntu1) UNRELEASED; urgency=medium
+ktp-common-internals (4:15.08.2-0ubuntu1) wily; urgency=medium
 
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 09 Oct 2015 16:16:57 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 14 Oct 2015 12:50:12 +0100
 
 ktp-common-internals (4:15.08.1-0ubuntu1) wily; urgency=medium
 
