--- a/debian/changelog
+++ b/debian/changelog
@@ -39,11 +39,15 @@ ktp-common-internals (15.08.2-1) UNRELEASED; urgency=medium
   * Add dh_install --list-missing to make sure everything is installed.
   * Break/Replace libktpotrprivate8.
   * Add patches listed below to deal with various licensing issues.
-    These have all been submitted upstream.
+    These have all been submitted upstream/accepted upstream.
     - 0001-Relicense-invalid-license-to-LGPL-2.1.patch
     - 0002-Relicense-invalid-license-to-LGPL-2.1.patch
     - 0003-Relicense-David-Edmundson-s-code-to-LGPL-2.1-to-matc.patch
     - 0004-Add-GPLv2-COPYING-file-as-there-s-a-few-files-still-.patch
+    See:
+    https://git.reviewboard.kde.org/r/125780/
+    https://git.reviewboard.kde.org/r/125923/
+    https://git.reviewboard.kde.org/r/125925/
   * Update copyright file to match the above licensing fixes.
 
  -- Diane Trout <diane@debian.org>  Tue, 03 Nov 2015 21:23:43 -0800
