--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ktp-common-internals (15.08.2-2) UNRELEASED; urgency=medium
+
+  * Update libktpcommoninternals9 qt logger dependency to
+    libtelepathy-logger-qt5 (>= 15.04) (Closes: #804409)
+
+ -- Diane Trout <diane@ghic.org>  Mon, 09 Nov 2015 11:03:24 -0800
+
 ktp-common-internals (15.08.2-1) unstable; urgency=medium
 
   * Apply homepage update patch from Matthew Cope
