--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ ktp-common-internals (15.08.2-2) UNRELEASED; urgency=medium
 
   * Update libktpcommoninternals9 qt logger dependency to
     libtelepathy-logger-qt5 (>= 15.04) (Closes: #804409)
+  * Change Diane Trouts email address back. (ease of SPAM filtering)
 
  -- Diane Trout <diane@ghic.org>  Mon, 09 Nov 2015 11:03:24 -0800
 
