--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ ktp-common-internals (15.08.2-2) UNRELEASED; urgency=medium
   * Update libktpcommoninternals9 qt logger dependency to
     libtelepathy-logger-qt5 (>= 15.04) (Closes: #804409)
   * Change Diane Trouts email address back. (ease of SPAM filtering)
+  * Add telepathy-accounts-signon dependency to libktpcommoninternals9,
+    which is needed to integrate with kaccounts system.
 
  -- Diane Trout <diane@ghic.org>  Mon, 09 Nov 2015 11:03:24 -0800
 
