--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ktp-common-internals (15.08.2-2) UNRELEASED; urgency=medium
+ktp-common-internals (15.08.2-2) unstable; urgency=medium
 
   * Update libktpcommoninternals9 qt logger dependency to
     libtelepathy-logger-qt5 (>= 15.04) (Closes: #804409)
@@ -7,7 +7,7 @@ ktp-common-internals (15.08.2-2) UNRELEASED; urgency=medium
     which is needed to integrate with kaccounts system.
   * Confirm symbols on other architectures.
 
- -- Diane Trout <diane@ghic.org>  Mon, 09 Nov 2015 11:03:24 -0800
+ -- Diane Trout <diane@ghic.org>  Mon, 09 Nov 2015 11:33:33 -0800
 
 ktp-common-internals (15.08.2-1) unstable; urgency=medium
 
