--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ktp-common-internals (15.08.3-1~) UNRELEASED; urgency=medium
+ktp-common-internals (15.12.0-1~) UNRELEASED; urgency=medium
 
   [ Harald Sitter ]
   * KDE Frameworks 5 port
@@ -46,8 +46,9 @@ ktp-common-internals (15.08.3-1~) UNRELEASED; urgency=medium
   * New upstream release (15.08.1).
   * New upstream release (15.08.2).
   * New upstream release (15.08.3).
+  * New upstream release (15.12.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 09 Nov 2015 09:42:42 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 16 Dec 2015 16:16:32 +0100
 
 ktp-common-internals (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
 
