--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ktp-common-internals (15.08.3-1) UNRELEASED; urgency=medium
+ktp-common-internals (15.08.3-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Diane Trout <diane@ghic.org>  Wed, 02 Dec 2015 21:16:38 -0800
+ -- Diane Trout <diane@ghic.org>  Wed, 02 Dec 2015 21:18:53 -0800
 
 ktp-common-internals (15.08.2-3) unstable; urgency=medium
 
