--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 ktp-common-internals (15.12.0-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Remove all 4 relicensing patches, applied upstream.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 06 Jan 2016 16:54:43 -0800
 
