--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ktp-common-internals (15.12.1-1~) UNRELEASED; urgency=medium
+ktp-common-internals (15.12.1-1) experimental; urgency=medium
 
   [ Harald Sitter ]
   * KDE Frameworks 5 port
@@ -28,7 +28,7 @@ ktp-common-internals (15.12.1-1~) UNRELEASED; urgency=medium
   * New upstream release (15.12.0).
   * New upstream release (15.12.1).
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 29 Jan 2016 11:19:15 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 01 Feb 2016 10:23:39 +0100
 
 ktp-common-internals (15.08.3-1) unstable; urgency=medium
 
