--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ktp-common-internals (15.12.1-2~) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 12 Feb 2016 09:29:53 +0100
+
 ktp-common-internals (15.12.1-1) experimental; urgency=medium
 
   [ Harald Sitter ]
