--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 ktp-common-internals (15.12.1-2~) UNRELEASED; urgency=medium
 
-  * 
+  * Add missing dependency to the -dev package.
 
  -- Maximiliano Curia <maxy@debian.org>  Fri, 12 Feb 2016 09:29:53 +0100
 
