--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ktp-common-internals (15.12.1-2~) UNRELEASED; urgency=medium
+ktp-common-internals (15.12.1-2) experimental; urgency=medium
 
   * Add missing dependency to the -dev package.
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 12 Feb 2016 09:29:53 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 12 Feb 2016 09:41:54 +0100
 
 ktp-common-internals (15.12.1-1) experimental; urgency=medium
 
