--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ktp-common-internals (4:15.12.1-0ubuntu1) UNRELEASED; urgency=medium
+ktp-common-internals (4:15.12.1-0ubuntu1) xenial; urgency=medium
 
   * Merged with Debian
   * New upstream release
 
- -- Clive Johnston <clivejo@aol.com>  Tue, 16 Feb 2016 13:19:56 +0000
+ -- Clive Johnston <clivejo@aol.com>  Wed, 09 Mar 2016 11:19:52 +0100
 
 ktp-common-internals (4:15.08.2-0ubuntu1) wily; urgency=medium
 
