--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ktp-common-internals (4:15.12.2-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream bugfix release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 09 Mar 2016 22:10:42 -0800
+
 ktp-common-internals (4:15.12.1-0ubuntu1) xenial; urgency=medium
 
   * Merged with Debian
