--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ktp-common-internals (4:15.12.3-0ubuntu1) UNRELEASED; urgency=medium
+ktp-common-internals (4:15.12.3-0ubuntu1) xenial; urgency=medium
 
   * New upstream bugfix release
   * Bump dependency versions to kaccounts-integration. 
   * New upstream bugfix release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 16 Mar 2016 20:24:26 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 14 Apr 2016 16:09:45 -0700
 
 ktp-common-internals (4:15.12.1-0ubuntu1) xenial; urgency=medium
 
