--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-ktp-common-internals (17.08.1-1~) UNRELEASED; urgency=medium
+ktp-common-internals (17.08.1-1) experimental; urgency=medium
 
   * Set Priority to optional
   * New upstream release (17.08.1).
+  * Update symbols files
+  * Add breaks/replaces against the kde-l10n packages
+  * Bump group breaks (17.08)
+  * Release to experimental
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 11 Sep 2017 14:39:16 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 11 Sep 2017 19:59:12 +0200
 
 ktp-common-internals (16.04.2-1) experimental; urgency=medium
 
