--- a/po/gl/ktp-common-internals.po
+++ b/po/gl/ktp-common-internals.po
@@ -5,19 +5,20 @@
 # Adrian Chaves Fernandez <adriyetichaves@gmail.com>, 2012, 2015.
 # Miguel Branco <mgl.branco@gmail.com>, 2013.
 # Marce Villarino <mvillarino@kde-espana.es>, 2013.
+# Adrián Chaves (Gallaecio) <adrian@chaves.io>, 2017.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2017-01-10 08:03+0100\n"
-"PO-Revision-Date: 2015-04-26 19:06+0200\n"
-"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
+"PO-Revision-Date: 2017-10-08 16:36+0100\n"
+"Last-Translator: Adrián Chaves (Gallaecio) <adrian@chaves.io>\n"
 "Language-Team: Galician <kde-i18n-doc@kde.org>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.5\n"
+"X-Generator: Lokalize 2.0\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Environment: kde\n"
 "X-Accelerator-Marker: &\n"
@@ -49,7 +50,7 @@ msgstr "Comezar unha conversa usando %1…"
 #: kpeople/actionsplugin/kpeople-actions-plugin.cpp:213
 #, kde-format
 msgid "Start Audio Call Using %1..."
-msgstr "Facer unha chamada usando %1…"
+msgstr "Facer unha chamada de son usando %1…"
 
 #: kpeople/actionsplugin/kpeople-actions-plugin.cpp:223
 #, kde-format
@@ -84,7 +85,7 @@ msgstr "Escoller un ficheiro para editar con %1"
 #: kpeople/uiplugins/chatplugin/kpeople_chat_plugin.cpp:74
 #, kde-format
 msgid "Chat for current contact is not supported"
-msgstr "Non é posíbel conversar co contacto actual."
+msgstr "Non se permite conversar co contacto actual."
 
 #: kpeople/uiplugins/chatplugin/kpeople_chat_plugin.cpp:157
 #, kde-format
@@ -300,7 +301,7 @@ msgstr "O usuario seleccionado non existe."
 #, kde-format
 msgctxt "Verbose user visible error string"
 msgid "Emergency calls are not supported"
-msgstr "Non se poden realizar chamadas de emerxencia."
+msgstr "Non se permite realizar chamadas de emerxencia."
 
 #: KTp/error-dictionary.cpp:89
 #, kde-format
@@ -336,7 +337,7 @@ msgstr "Semella haber un problema coa súa rede; comprobe a conexión"
 #, kde-format
 msgctxt "Verbose user visible error string"
 msgid "You were removed from the channel because you did not respond"
-msgstr "Expulsóuselle temporalmente da canle por non ter respondido"
+msgstr "Retirárono temporalmente da canle por non responder"
 
 #: KTp/error-dictionary.cpp:101
 #, kde-format
@@ -390,7 +391,7 @@ msgstr "A chamada actual foi recollida por outro recurso"
 #, kde-format
 msgctxt "Verbose user visible error string"
 msgid "Account with this username already exists"
-msgstr "Xa existe unha conta con este nome"
+msgstr "Xa existe unha conta con este nome de usuario"
 
 #: KTp/error-dictionary.cpp:119
 #, kde-format
@@ -438,7 +439,7 @@ msgstr ""
 #, kde-format
 msgctxt "Verbose user visible error string"
 msgid "The channel was terminated for no apparent reason"
-msgstr "Pechouse a canle por algunha razón non evidente"
+msgstr "Terminouse a canle por algunha razón non evidente"
 
 #: KTp/error-dictionary.cpp:131
 #, kde-format
@@ -894,7 +895,7 @@ msgstr "Desconectado"
 #: KTp/telepathy-handler-application.cpp:126
 #, kde-format
 msgid "Persistent mode (do not exit on timeout)"
-msgstr "Modo persistente (non saír ao cabo dun tempo)"
+msgstr "Modo persistente (non saír ao pasar un tempo)"
 
 #: KTp/telepathy-handler-application.cpp:127
 #, kde-format
@@ -1017,12 +1018,12 @@ msgstr "Non foi posíbel crear a nova imaxe o avatar"
 #: KTp/Widgets/contact-info-dialog.cpp:334
 #, kde-format
 msgid "Contact can see when you are online:"
-msgstr "Este contacto pode ver cando está vostede ligado:"
+msgstr "Este contacto pode ver cando está vostede conectado:"
 
 #: KTp/Widgets/contact-info-dialog.cpp:335
 #, kde-format
 msgid "You can see when the contact is online:"
-msgstr "Vostede pode ver cando o contacto está ligado:"
+msgstr "Vostede pode ver cando o contacto está conectado:"
 
 #: KTp/Widgets/contact-info-dialog.cpp:336
 #, kde-format
