--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ktp-common-internals (17.08.3-0r1) UNRELEASED; urgency=medium
+
+  [ Pino Toscano ]
+  * New upstream release.
+
+ -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 03 Dec 2017 11:46:46 +0100
+
 ktp-common-internals (17.08.1-1) experimental; urgency=medium
 
   * Set Priority to optional
