--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ ktp-common-internals (17.08.3-0r1) UNRELEASED; urgency=medium
   * Bump Standards-Version to 4.1.1, no changes required.
   * Simplify watch file, and switch it to https.
   * Remove trailing whitespaces in changelog.
+  * Update few build dependencies:
+    - bump libtelepathy-logger-qt-dev to >= 17.08~
+    - bump libtelepathy-qt5-dev to >= 0.9.7~
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 03 Dec 2017 11:46:46 +0100
 
