--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ ktp-common-internals (17.08.3-0r1) UNRELEASED; urgency=medium
   * Bump Standards-Version to 4.1.1, no changes required.
   * Simplify watch file, and switch it to https.
   * Remove trailing whitespaces in changelog.
-  * Update few build dependencies:
+  * Update few build & runtime dependencies:
     - bump libtelepathy-logger-qt-dev to >= 17.08~
     - bump libtelepathy-qt5-dev to >= 0.9.7~
   * Update symbols files.
