--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ ktp-common-internals (17.08.3-0r1) UNRELEASED; urgency=medium
     - bump libtelepathy-logger-qt-dev to >= 17.08~
     - bump libtelepathy-qt5-dev to >= 0.9.7~
   * Update symbols files.
+  * Remove duplicated Priority in kde-telepathy-debugger.
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 03 Dec 2017 11:46:46 +0100
 
