--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-ktp-common-internals (17.08.3-0r1) UNRELEASED; urgency=medium
+ktp-common-internals (17.08.3-1) unstable; urgency=medium
 
-  [ Pino Toscano ]
+  * Team upload.
+  * Upload to unstable.
   * New upstream release.
   * Bump Standards-Version to 4.1.2, no changes required.
   * Simplify watch file, and switch it to https.
@@ -13,7 +14,7 @@ ktp-common-internals (17.08.3-0r1) UNRELEASED; urgency=medium
   * Adjust l10npkgs_firstversion_ok to the version where kde-l10n will
     drop translations.
 
- -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 03 Dec 2017 11:46:46 +0100
+ -- Pino Toscano <pino@debian.org>  Sat, 09 Dec 2017 08:35:36 +0100
 
 ktp-common-internals (17.08.1-1) experimental; urgency=medium
 
